[gd_scene load_steps=61 format=3 uid="uid://b2iijrv4a5h80"]

[ext_resource type="Script" uid="uid://dvqy76tj4t1d6" path="res://tarzan/tarzan.gd" id="1_bf6xn"]
[ext_resource type="Texture2D" uid="uid://xib07mdv3g51" path="res://assets/yellowNinja - Death.png" id="2_2sfi3"]
[ext_resource type="Texture2D" uid="uid://brheyatr5xmch" path="res://assets/yellowNinja - Whitehit.png" id="3_gg88p"]
[ext_resource type="Texture2D" uid="uid://dlvrbju6uutqv" path="res://assets/yellowNinja - idle.png" id="4_muhvn"]
[ext_resource type="Texture2D" uid="uid://md5si682wx7" path="res://assets/yellowNinja - walk.png" id="5_6sh7k"]
[ext_resource type="Texture2D" uid="uid://02utf7lnire7" path="res://assets/yellowNinja - attack.png" id="6_oon20"]
[ext_resource type="Texture2D" uid="uid://d2pqry6lxk8uh" path="res://assets/+1.png" id="7_0gvar"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4i5jo"]
atlas = ExtResource("2_2sfi3")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5ktp"]
atlas = ExtResource("2_2sfi3")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cj4d"]
atlas = ExtResource("2_2sfi3")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0skiq"]
atlas = ExtResource("2_2sfi3")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_evwmu"]
atlas = ExtResource("2_2sfi3")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr6xp"]
atlas = ExtResource("2_2sfi3")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3rfl"]
atlas = ExtResource("2_2sfi3")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fufq"]
atlas = ExtResource("2_2sfi3")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypy1t"]
atlas = ExtResource("2_2sfi3")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4r87"]
atlas = ExtResource("2_2sfi3")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0p6r"]
atlas = ExtResource("2_2sfi3")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxugg"]
atlas = ExtResource("2_2sfi3")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckyh6"]
atlas = ExtResource("2_2sfi3")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxsub"]
atlas = ExtResource("2_2sfi3")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7stjf"]
atlas = ExtResource("3_gg88p")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieo7q"]
atlas = ExtResource("3_gg88p")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5msd"]
atlas = ExtResource("3_gg88p")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd3hi"]
atlas = ExtResource("3_gg88p")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7e8a"]
atlas = ExtResource("4_muhvn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo5k0"]
atlas = ExtResource("4_muhvn")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdyr6"]
atlas = ExtResource("4_muhvn")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hro0k"]
atlas = ExtResource("4_muhvn")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd1b2"]
atlas = ExtResource("4_muhvn")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3sem"]
atlas = ExtResource("4_muhvn")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1g8i"]
atlas = ExtResource("4_muhvn")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_05ib8"]
atlas = ExtResource("4_muhvn")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml3r7"]
atlas = ExtResource("5_6sh7k")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l7pb"]
atlas = ExtResource("5_6sh7k")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy8mc"]
atlas = ExtResource("5_6sh7k")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_estw0"]
atlas = ExtResource("5_6sh7k")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3a7o"]
atlas = ExtResource("5_6sh7k")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj3iw"]
atlas = ExtResource("5_6sh7k")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmy82"]
atlas = ExtResource("5_6sh7k")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ag4w"]
atlas = ExtResource("5_6sh7k")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecuua"]
atlas = ExtResource("5_6sh7k")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xojfr"]
atlas = ExtResource("5_6sh7k")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u55od"]
atlas = ExtResource("6_oon20")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd1vn"]
atlas = ExtResource("6_oon20")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt0p2"]
atlas = ExtResource("6_oon20")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2dc6"]
atlas = ExtResource("6_oon20")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6k6u"]
atlas = ExtResource("6_oon20")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yly8q"]
atlas = ExtResource("6_oon20")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lcao"]
atlas = ExtResource("6_oon20")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf8ej"]
atlas = ExtResource("6_oon20")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6k5r"]
atlas = ExtResource("6_oon20")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2csi"]
atlas = ExtResource("6_oon20")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4s2e"]
atlas = ExtResource("6_oon20")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb71l"]
atlas = ExtResource("6_oon20")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fik6w"]
atlas = ExtResource("6_oon20")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ihpw"]
atlas = ExtResource("6_oon20")
region = Rect2(2304, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_vvruw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i5jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5ktp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cj4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0skiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evwmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr6xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3rfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fufq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypy1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4r87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0p6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxugg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckyh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxsub")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7stjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieo7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5msd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd3hi")
}],
"loop": true,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7e8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo5k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdyr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hro0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd1b2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3sem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1g8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05ib8")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml3r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l7pb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy8mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_estw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3a7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj3iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmy82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ag4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecuua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xojfr")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u55od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd1vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt0p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2dc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6k6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yly8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lcao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf8ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6k5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2csi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4s2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb71l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fik6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ihpw")
}],
"loop": true,
"name": &"shoot",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ursvq"]
size = Vector2(3.34921, 11.8119)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3abk3"]

[node name="tarzan" type="CharacterBody2D" groups=["player"]]
collision_layer = 8
collision_mask = 15
script = ExtResource("1_bf6xn")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -12)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_vvruw")
animation = &"die"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.25905e-05, 8.00003)
rotation = -3.14159
scale = Vector2(4.77723, 3.55573)
shape = SubResource("RectangleShape2D_ursvq")

[node name="grapple" type="RayCast2D" parent="."]
target_position = Vector2(0, 150)

[node name="extra+damage" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 3)
position_smoothing_enabled = true
position_smoothing_speed = 20.0

[node name="+1" type="Sprite2D" parent="."]
visible = false
position = Vector2(12.5, -23)
scale = Vector2(1.112, 1)
texture = ExtResource("7_0gvar")

[node name="collect" type="Timer" parent="."]

[node name="stab" type="Node2D" parent="."]

[node name="ShapeCast2D" type="ShapeCast2D" parent="stab"]
position = Vector2(-9, 6)
shape = SubResource("CapsuleShape2D_3abk3")
target_position = Vector2(78, 1)
collide_with_areas = true

[node name="catch_jump" type="Node2D" parent="."]

[node name="right" type="RayCast2D" parent="catch_jump"]
position = Vector2(0, 30)
target_position = Vector2(14, 0)

[node name="left" type="RayCast2D" parent="catch_jump"]
position = Vector2(0, 30)
target_position = Vector2(-16, 0)

[node name="catch head" type="Node2D" parent="."]

[node name="left_stop" type="RayCast2D" parent="catch head"]
position = Vector2(-5, -12)
target_position = Vector2(0, -3)

[node name="right_stop" type="RayCast2D" parent="catch head"]
position = Vector2(5, -12)
target_position = Vector2(0, -3)

[node name="left_go" type="RayCast2D" parent="catch head"]
position = Vector2(-11, -12)
target_position = Vector2(0, -6)

[node name="right_go" type="RayCast2D" parent="catch head"]
position = Vector2(11, -12)
target_position = Vector2(0, -6)

[node name="VineSound" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="head_catch" type="RayCast2D" parent="."]
position = Vector2(0, -20)
target_position = Vector2(0, -10)
collision_mask = 3

[node name="HotkeyLabel" type="Label" parent="."]
offset_left = -15.0
offset_top = -60.0
offset_right = -15.0
offset_bottom = -60.0
text = "F - Vine Fury"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="extra+damage" to="." method="_on_extradamage_timeout"]
[connection signal="timeout" from="collect" to="." method="_on_collect_timeout"]
